apps/Admin/index.scss
/* ... */
#label1 {
  font-size: 11.2px !important;
}

.k-dropdown-wrap > .k-input {
  margin: auto;
}

.k-list-filter {
  padding: 0px !important;
  min-height: 35px;
}

.k-list-filter > .k-textbox {
  margin: 0px;
  height: 35px;
}

.parentProjectDropdown {
  display: flex;
  div {
    width: 100%;
  }
  button {
    border: none;
    background-color: #f4f4f4;
    border-radius: 4px;
  }
}
.k-dialog-buttongroup {
  position: fixed;
  bottom: 0;
  width: 100%;
}

.sidenav---sidenav---_2tBP {
  background: #183e4b !important;
}

div.desk {
  text-align: center;
  padding: 0.6em 1.2em;
  border: 0px solid rgba(0, 0, 0, 0.125);
  border-radius: 5px;
  // top: 12px;
  // left: 17px;
  gap: 1rem;
  flex-basis: 28%;
  align-items: center;
  height: auto;
  justify-content: center;
  /* width: 140px; */
  display: flex;
  margin: 20px;
  cursor: pointer;
  background-color: white;
  box-shadow: rgba(50, 50, 93, 0.15) 0px 6px 10px -2px,
    rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
  transition: transform 0.2s cubic-bezier(0.6, -0.28, 0.74, 0.05);
}

div.desk .header {
  // background-color: transparent;
  color: #275362;
  // padding: 8px;
  font-size: 20px;
  // border-radius: 1.25rem;
}

div.desk .header .fad {
  font-weight: lighter !important;
}

div.desk .text {
  color: #275362;
  font-weight: 100;
  font-size: 18px;

  p {
    margin-bottom: 0;
  }
}

div.desk:hover {
  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
  transform: scale(1.05);
  transition: transform 0.2s ease-in-out;
}

div.header {
  background-color: white;
  color: #275362;
  padding: 10px;
  font-size: 40px;
  border-radius: 1.25rem;
}

div.text {
  color: #275362;
  font-weight: 600;
  font-size: 22px;
}

div.iconTitle {
  padding: 10px;
  text-align: center;
  display: flex;
  flex-wrap: wrap;
  height: fit-content;
  justify-content: flex-start;
  align-content: space-between;
}

.icon-title {
  margin: 10px;
  flex-direction: column;
  display: contents;
}

// Added CSS for custom scrollbar in Admin App

#admin-outer-container nav::-webkit-scrollbar {
  width: 8px;
}

#admin-outer-container nav::-webkit-scrollbar-track {
  border-radius: 10px;
  box-shadow: inset 0 0 6px rgb(31, 66, 78);
  background-color: #275362;
  margin-top: 1px;
  margin-bottom: 1px;
}

#admin-outer-container nav::-webkit-scrollbar-thumb {
  background-color: #306475;
  border-radius: 10px;
  box-shadow: inset 0 0 6px rgb(69, 93, 101);
  height: 100px;
}
.k-grid-container {
	// min-height: 52vh;
  height: 70vh !important;
}
// Grid changes
.Window_Admin {
  .k-grouping-header {
    border-color: #dde2e7;
    background-color: #f8f9fa;
    color: #8f9bb3;
    text-align: center;
    display: none;
  }
  .k-grid th,
  .k-grid td {
    padding: 0px 2px !important;
  }
  .k-grid td {
    padding: 5px !important;
    font-size: small !important;
  }
  .k-filtercell-wrapper > .k-textbox {
    height: 25px;
    width: 25px;
    background-color: red;
  }
  .k-textbox {
    font-size: small !important;
  }
  tr th.k-header {
    font-size: 15px;
    padding: 0.4rem 0.6rem;
    background-color: #f8f9fa;
    font-weight: 100;
    font-family: Roboto, sans-serif !important;
  }
  .DashBG {
    background-color: #f1f1f1;
    // max-height: 97%;
    // overflow-y: hidden;
  }
}

